<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/iv_signupLogo_signup"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/giveaway"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_text1_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_signupLogo_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/signup_text1"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tv_text2_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_text1_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/signup_text2"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="14sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_firstName_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_text2_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_lastName_signup"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="First Name"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundColor="@color/white">

        <EditText
            android:id="@+id/et_firstName_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/round_btn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lastName_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_firstName_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_emailId_signup"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="Last Name"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundColor="@color/white">

        <EditText
            android:id="@+id/et_lastName_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/round_btn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_emailId_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_lastName_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_password_signup"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="Email Id"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundColor="@color/white">

        <EditText
            android:id="@+id/et_emailId_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/round_btn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_emailId_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_confirmPassword_signup"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="Password"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundColor="@color/white">

        <EditText
            android:id="@+id/et_password_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/round_btn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmPassword_signup"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_password_signup"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="Confirm Password"
        app:hintTextColor="@color/purple_700"
        app:boxBackgroundColor="@color/white">

        <EditText
            android:id="@+id/et_confirmPassword_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/round_btn"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_confirmPassword_signup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="Sign Up"
        android:textSize="16sp"
        android:background="@drawable/round_btn"
        android:backgroundTint="@color/btn_color"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signup">

        <TextView
            android:id="@+id/tv_already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>